Implemted: creating/updating/deleting feature, setting package content
