# api/openapi.yaml
@@ -215,6 +215,64 @@ paths:
                 $ref: '#/components/schemas/Error'
           description: Unexpected error
       summary: Returns list of features
+  /feature/{featureName}:
+    delete:
+      operationId: deleteFeature
+      parameters:
+      - description: Feature name to delete or update
+        explode: false
+        in: path
+        name: featureName
+        required: true
+        schema:
+          type: string
+        style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Feature'
+      responses:
+        204:
+          description: the specified feature has been deleted
+        default:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Unexpected error
+      summary: Deletes a nfeature
+    put:
+      operationId: createFeature
+      parameters:
+      - description: Feature name to delete or update
+        explode: false
+        in: path
+        name: featureName
+        required: true
+        schema:
+          type: string
+        style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Feature'
+      responses:
+        201:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Feature'
+          description: the specified has been created or an existing feature has been
+            updated
+        default:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Unexpected error
+      summary: Creates a new feature
   /packageContent/{packageName}:
     get:
       operationId: packageContent
@@ -241,6 +299,32 @@ paths:
                 $ref: '#/components/schemas/Error'
           description: Unexpected error
       summary: Returns list of features belonging to the specified package
+    post:
+      operationId: updatePackage
+      parameters:
+      - description: Name of the package
+        explode: false
+        in: path
+        name: packageName
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/inline_response_200_1'
+          description: Feature updated
+        default:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Unexpected error
+      summary: Creates new package with the given content or modifies an existing
+        package
   /licensedFeaturesForKey/{keyId}:
     get:
       operationId: licensedFeaturesForKey
@@ -516,3 +600,23 @@ components:
       required:
       - features
       - package
+    inline_response_200_1:
+      example:
+        features:
+        - name: name
+          description: description
+          isPackage: true
+        - name: name
+          description: description
+          isPackage: true
+        package:
+          name: name
+          description: description
+          isPackage: true
+      properties:
+        package:
+          $ref: '#/components/schemas/Feature'
+        features:
+          items:
+            $ref: '#/components/schemas/Feature'
+          type: array
