# openapi/model_inline_response_200_1.go
@@ -1,0 +1,16 @@
+/*
+ * PANGEA License Manager
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 0.1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type InlineResponse2001 struct {
+	Package Feature `json:"package,omitempty"`
+
+	Features []Feature `json:"features,omitempty"`
+}
